# 2023-autumn-ab-python-hw-14-team-dev-zotic1001

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  models.py  pyproject.toml
.github/workflows/: app.yml
config/: settings.py
db/: database.py  models.py  users.py  words_repo.py
docker/homework/: Dockerfile
docker/tests/: Dockerfile
migration/versions/: 1bbd8a7f5bee_create_new_table.py  bb75acd7565e_create_table.py  c1730028cf37_.py
src/homework/: app.py  asgi.py  contracts.py  main.py
src/homework/api/auth/: auth.py  auth_app.py  manager.py  schemas.py
src/server/: asgi.py  contracts.py  main.py  server.py
src/word/: word.py  wordClient.py  word_client.py
tests/: test_server.py
