[tool.poetry]
name = "2023-autumn-ab-python-hw-14-team-dev-zotic1001"
version = "0.1.0"
description = ""
authors = ["Pavel Zakharov <zotic1001@gmail.com>", "Dzekalo Andrei"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
fastapi = "^0.108.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
