[tool.poetry]
name = "2023-autumn-ab-python-hw-14-team-dev-zotic1001"
version = "0.1.0"
description = ""
authors = ["Pavel Zakharov <zotic1001@gmail.com>", "Dzekalo Andrei"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.5.3"
psycopg2-binary = "^2.9.9"
fastapi = "^0.108.0"
sqlalchemy = "^2.0.24"
uvicorn = "^0.15.0"
pydantic-settings = "^2.1.0"
bcrypt = "^4.1.2"
pyjwt = "^2.8.0"
httpx = "^0.26.0"
pytest-mock = "^3.12.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
alembic = "^1.12.0"
faker = "^19.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
